--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -10,3 +10,7 @@ jobs:
     steps:
       - name: Say Hello
         run:  echo :GitHub Actions is working"
+      - name: Deploy report to Github Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: $ {{ secrets.GITHUB_TOKEN }}
